--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 
 <br><br>
 <h3>Clearway Printing</h3>
-<p>Coming Soon.</p>
+<p>Coming Soon..</p>
  <img src="image.jpb" alt="Image Title" class="responsive"> 
 
 </body>
